--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <style>
     #Front {
       background-color: rgb(105, 105, 105);
+      padding-top: 5px;
     }
 
     #Title {
@@ -47,9 +48,9 @@
     }
 
     #Navigation ul li a {
-      color: #fff;
-      text-decoration: none;
-    }
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+}
 
     #Navigation ul li a:hover {
       text-decoration: underline;
@@ -138,6 +139,18 @@
   color:rgb(0,0,255);
 }
 
+.link-button {
+            padding: 5px;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            color: white;
+            background-color: #555;
+            text-decoration: none; /* Remove underline */
+            display: inline-block; /* Make it inline-block to adjust width */
+            margin-right: 10px; /* Add some margin between buttons */
+            margin-bottom: 5px;
+        }
 
   </style>
 </head>
@@ -145,7 +158,10 @@
 <body>
   <div id="container" style="border-top: 3px solid red; ">
     <header>
+       <a href="https://kctruenorth.github.io/ISU-Artifact_A/" class="link-button">Artifact A</a>
+    <a href="https://kctruenorth.github.io/ISU-Artifact-B/" class="link-button">Artifact B</a>
       <div id="Front">
+
         <h1 id="Title">ISU Artifact - Part B</h1>
         <h2 id=Intro>Use the links below to jump to different sections of the webpage</h2>
       </div>
