--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 <body>
   <div id="container" style="border-top: 3px solid red; ">
     <header>
-       <a href="https://kctruenorth.github.io/ISU-Artifact_A/" id="link-button">Artifact A</a>
+       <a href="https://kctruenorth.github.io/ISU-Artifact-A/" id="link-button">Artifact A</a>
     <a href="https://kctruenorth.github.io/ISU-Artifact-B/" id="link-buttonB">Artifact B</a>
       <div id="Front">
 
