--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         </ul><br>
         <h2>Practice:</h2>
         <h3>WHICH OPTION BEST FITS THE SCATTERPLOT?</h3>
-        <img src="file:///home/chronos/u-de77ddd984fcdf4195ac46aac67f5d9ab1de2645/MyFiles/Downloads/Screenshot%202023-12-13%2010.04.09%20AM.png">
+        <img src="Screenshot 2023-12-13 10.04.09 AM.png">
          <a id="link" href="https://www.online-python.com/3nTuyKcmdY" target="_blank"><p><strong>Select option _____________________ </strong></p></a>
       </section>
       <a href="https://replit.com/join/biyjszhbal-kchen34">
