--- a/index.html
+++ b/index.html
@@ -161,6 +161,19 @@
             border: 2px solid white;
             cursor: pointer;
             color: white;
+            background-color: #555;
+            text-decoration: none; /* Remove underline */
+            display: inline-block; /* Make it inline-block to adjust width */
+            margin-right: 10px; /* Add some margin between buttons */
+            margin-bottom: 5px;
+}
+
+#link-buttonC {
+            padding: 5px;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            color: white;
             background-color:#555;
             text-decoration: none; /* Remove underline */
             display: inline-block; /* Make it inline-block to adjust width */
@@ -175,8 +188,9 @@
 <body>
   <div id="container" style="border-top: 3px solid red; ">
     <header>
-       <a href="https://kctruenorth.github.io/ISU-Artifact_A/" id="link-button">Artifact A</a>
+         <a href="https://kctruenorth.github.io/ISU-Artifact_A/" id="link-button">Artifact A</a>
     <a href="https://kctruenorth.github.io/ISU-Artifact_B/" id="link-buttonB">Artifact B</a>
+    <a href = "https://kctruenorth.github.io/ISU-Artifact_C/" id="link-buttonC">Artifact C</a>
       <div id="Front">
 
         <h1 id="Title">ISU Artifact - Part B</h1>
